🔧 Move --add-opens to Spec tests run config